k8s/deployment-with-secret.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-with-secret
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-with-secret
  template:
    metadata:
      labels:
        app: myapp-with-secret
    spec:
      volumes:
        - name: secret
          secret:
            secretName: myapp-secret
      containers:
        - name: myapp
          image: "pevablanchard/k8s-101:1.0"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: secret
              mountPath: /app/config
