k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
spec:
  selector:
    app: myapp
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
