k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  rules:
    - http:
        paths:
          - path: /helloworld
            backend:
              serviceName: myapp-svc
              servicePort: 8080
